# review_classifier

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  classifier.py  doc_classification.py  embedding_matrix.py  helpers.py  preprocessor.py  pyproject.toml  review_dataset.py  test_api.py
.github/workflows/: ci-cd.yml
app/: review_ui.py
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/misc/: preprocessor.py
model_store/: model.pth  vectorizer.json
src/review_classifier/: __init__.py  api.py  embeddings.npy  model_training.py  preprocessor.py  sequence_vocabulary.py  test_model.py  vectorizer.py  vocabulary.py
src/review_classifier/data/: review_dataset.py
src/review_classifier/eval/: test.py
src/review_classifier/model/: classifier.py  trainer.py
src/review_classifier/preprocess/: data_preprocess.py  sequence_vocabulary.py  vectorizer.py
src/review_classifier/utils/: embedding_matrix.py  helpers.py
test_app.py/: app.py
tests/: test_review_classifier.py
