[tool.poetry]
name = "review_classifier"
version = "1.2.0"
description = "A package for doing great things!"
authors = ["Agbleze"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.14"
importlib_metadata = "7.1.0"
typing_extensions = "4.12.2"
torch = "2.1.1+cu118"
requests = "2.32.3"
numpy = "1.26.4"

[tool.poetry.dev-dependencies]
pytest = "8.1.1"
python-semantic-release = "10.1.0"
poetry = "2.1.3"


[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
review_classifier = "review_classifier.model.trainer:main"
