[tool.poetry]
name = "review_classifier"
version = "1.3.1"
description = "A package for doing great things!"
authors = ["Agbleze"]
license = "MIT"
readme = "README.md"

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10.14"
importlib_metadata = "7.1.0"
typing_extensions = "4.12.2"
torch = { version = "2.1.1+cu118", source = "pytorch-cu118" }
requests = "2.32.3"
numpy = "1.26.4"

[tool.poetry.dev-dependencies]
pytest = "8.3.3"
python-semantic-release = "10.1.0"
poetry = "2.1.3"
pytest-cov = "^5.0.0"
jupyter = "^1.1.1"
myst-nb = {version = "^1.1.2", python = "^3.9"}
sphinx-autoapi = "^3.3.2"
sphinx-rtd-theme = "^2.0.0"


[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
review_classifier = "review_classifier.model.trainer:main"
